Cambio con animaciones y transiciones

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header><!-- Aca termina el HEADER -->
     <div class="logoprincipal">
         <img src="recursos/Logo CowboyMining_color.png" width="580">
-        <a href="paginas/rigs.html"><button class="btn btn--logoprincipal">iCompra tu equipo!</button></a>
+        <a href="paginas/rigs.html"><button class="btn btn--logoprincipal btn__animacion ">iCompra tu equipo!</button></a>
     </div>       
     <div class="inicio inicio__grid1">
         <h2 class=titulos>¿Que es la mineria de criptomonedas?</h2>
