--- a/paginas/ubicacion.html
+++ b/paginas/ubicacion.html
@@ -8,38 +8,75 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../recursos/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../recursos/favicon-16x16.png">
     <link rel="manifest" href="../recursos/site.webmanifest">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lobster&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <title>CowboyMining - Mineria de criptomonedas</title>
 </head>
 <body>
-    <header class="header"> <!-- Aca comienza el HEADER -->
-        <img class="header__logo" src="../recursos/android-chrome-192x192.png" >
-        <h1 class="header__titulo">owboyMining</h1>   
-        <nav class="header__menu"> <!-- Aca empieza el MENU -->
-            <ul class="header__items">
-                <a href="../index.html"><li>Inicio</li></a>
-                <a href="rigs.html"><li>Rigs</li></a>
-                <a href="acercadenosotros.html"><li>Acerca de nosotros</li></a>
-                <a href="contacto.html"><li>Contacto</li></a>
-                <a href="ubicacion.html"><li>Ubicacion</li></a>
-            </ul>
-        </nav><!-- Aca termina el MENU -->
-    </header><!-- Acca termina el HEADER -->
-    <main> <!-- Aca comienza el MAIN -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="../recursos/android-chrome-192x192.png" alt="..." height="36">
+                </a>
+                <button   button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="rigs.html">Rigs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="acercadenosotros.html">Acerca de nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+</header>
+
+    <main>
         <section class="ubicacion">
-            <h2 class="titulos">¿Donde podes encontrarnos?</h2>
-            <p class="descripcion">Nos encontramos en la zona de Belgrano, en Avenida del libertador y Monroe</p>
-            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Av.%20del%20Libertador%206402,%20C1428%20CABA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map plugin html</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+            <div id="about" class="container-fluid">
+                <br>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2 class="titulos">¿Donde podes encontrarnos?</h2>
+                        <p class="descripcion">Nos encontramos en la zona de Belgrano, en Avenida del libertador y Monroe</p>
+                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Av.%20del%20Libertador%206402,%20C1428%20CABA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map plugin html</a><style>.gmap_canvas {overflow:hidden;background:none;height:500px;width:600px;}</style></div></div><br>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <div class="footer__redes">
-        <a href="https://www.facebook.com/" target="blank"><img src="https://img.icons8.com/fluency/48/000000/facebook-new.png"/></a>
-        <a href="https://www.instagram.com/"target="blank"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"/></a>
-        <a href="https://twitter.com/"target="blank"> <img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png"/></a>
-        <a href="https://web.whatsapp.com/"target="blank"><img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/></a>
-        <span>Todos los derechos reservados</span>
+    <footer class="bg-dark text-center text-white">
+        <div class="container p-4 pb-0">
+            <section class="mb-4">
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button">
+                    <i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/" role="button">
+                    <i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button">
+                    <i class="fab fa-instagram"></i></a>
+            </section>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        Todos los derechos reservados
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/4edc9dcc3e.js" crossorigin="anonymous"></script>
 </body>
 
 
