--- a/paginas/rigs.html
+++ b/paginas/rigs.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../recursos/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../recursos/favicon-16x16.png">
     <link rel="manifest" href="../recursos/site.webmanifest">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,42 +18,79 @@
 </head>
 <body class="grid__containerRigs">
     <header>
-        <img class="header__logo" src="../recursos/android-chrome-192x192.png" > 
-        <nav class="header__menu">
-            <ul class="header__items">
-                <a href="../index.html"><li>Inicio</li></a>
-                <a href="rigs.html"><li>Rigs</li></a>
-                <a href="acercadenosotros.html"><li>Acerca de nosotros</li></a>
-                <a href="contacto.html"><li>Contacto</li></a>
-                <a href="ubicacion.html"><li>Ubicacion</li></a>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="../recursos/android-chrome-192x192.png" alt="..." height="36">
+                </a>
+                <button   button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="rigs.html">Rigs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="acercadenosotros.html">Acerca de nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-    </header>
-    <div class="titulos__rig">
+</header>
+        <div class="titulos__rig">
         <h2 class="titulos">Nuestros RIGS</h2>
     </div>
-    <div class="rigs grid__rig1">
-        <img class="rigs__placas" src="../recursos/6600xt.jpg">
-        <p class=>¡Arma tu rig con placas 6600xt!</p> 
-        <a href="https://www.mercadolibre.com.ar/placa-de-video-amd-asus-dual-radeon-6600-series-rx-6600-xt-dual-rx6600xt-o8g-oc-edition-8gb/p/MLA18499984?pdp_filters=category:MLA1658#searchVariation=MLA18499984&position=2&search_layout=grid&type=product&tracking_id=2f764a35-df75-4d42-9282-29af33229efa"><button class="btn ">Comprar</button></a>
+    <div class="row">
+    <div class="card" style="width: 30rem;">
+        <img class="card-img-top" src="../recursos/6600xt.jpg" alt="Card image cap">
+        <div class="card-body">
+            <p class=>¡Arma tu rig con placas 6600xt!</p>
+            <button class="btn btn__comprar">Comprar</button></a>
+        </div>
     </div>
-    <div class="rigs grid__rig2">
-        <img class="rigs__placas" src="../recursos/580rx.jpg">
-        <p>¡Arma tu rig con placas 580rx!</p>
-        <a href="https://www.mercadolibre.com.ar/placa-de-video-amd-afox-radeon-rx-500-series-rx-580-afrx580-8192d5h2-v2-8gb/p/MLA15700720#searchVariation=MLA15700720&position=1&search_layout=stack&type=product&tracking_id=539b5539-b2a5-4f01-8d4c-4948640c7e80"><button class="btn ">Comprar</button></a>
+    <div class="card" style="width: 30rem;">
+        <img class="card-img-top" src="../recursos/580rx.jpg" alt="Card image cap">
+        <div class="card-body">
+            <p>¡Arma tu rig con placas 580rx!</p>
+            <button class="btn btn__comprar">Comprar</button></a>
+        </div>
     </div>
-    <div class="rigs rigs__rig3">
-        <img class="rigs__placas" src="../recursos/MSI-GTX1660-SUPER-VENTUS-XS-OC_Foto0g.jpg">
-        <p>¡Arma tu rig con placas 1660 Super!</p>
-        <a href="https://articulo.mercadolibre.com.ar/MLA-1129024662-placa-de-video-nvidia-gtx-1660-super-ventus-xs-6gb-gddr6-_JM#position=14&search_layout=grid&type=item&tracking_id=3da2ca7a-7229-4996-b2b3-45bc398aad8a"><button class="btn ">Comprar</button></a>
+    <div class="card" style="width: 30rem;">
+        <img class="card-img-top" src="../recursos/MSI-GTX1660-SUPER-VENTUS-XS-OC_Foto0g.jpg" alt="Card image cap">
+        <div class="card-body">
+            <p>¡Arma tu rig con placas 1660 Super!</p>
+            <button class="btn btn__comprar">Comprar</button></a>
+        </div>
     </div>
-    <footer>
-        <a href="https://www.facebook.com/" target="blank"><img src="https://img.icons8.com/fluency/48/000000/facebook-new.png"/></a>
-        <a href="https://www.instagram.com/"target="blank"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"/></a>
-        <a href="https://twitter.com/"target="blank"> <img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png"/></a>
-        <a href="https://web.whatsapp.com/"target="blank"><img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/></a>
-        <span>Todos los derechos reservados</span>
+    </div>
+    <footer class="bg-dark text-center text-white">
+        <div class="container p-4 pb-0">
+            <section class="mb-4">
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button">
+                    <i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/" role="button">
+                    <i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button">
+                    <i class="fab fa-instagram"></i></a>
+            </section>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        Todos los derechos reservados
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/4edc9dcc3e.js" crossorigin="anonymous"></script>
 </body>
 
 
